--- a/src/s-core-devcontainer/.devcontainer/devcontainer.json
+++ b/src/s-core-devcontainer/.devcontainer/devcontainer.json
@@ -2,7 +2,18 @@
     "build": {
         // Installs latest version from the Distribution
         "dockerfile": "./Dockerfile",
-        "context": "."
+        "context": ".",
+        "args": {
+        "HTTP_PROXY": "${localEnv:HTTP_PROXY}",
+        "HTTPS_PROXY": "${localEnv:HTTPS_PROXY}",
+        "http_proxy": "${localEnv:http_proxy}",
+        "https_proxy": "${localEnv:https_proxy}",
+        "NO_PROXY": "${localEnv:NO_PROXY}",
+        "no_proxy": "${localEnv:no_proxy}",
+        "USERNAME": "${localEnv:USER}",
+        "USER_ID": "${localEnv:UID}",
+        "USER_GID": "${localEnv:GID}"
+        }
     },
     "features": {
         "ghcr.io/devcontainers/features/common-utils": {
